--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "id": "/stall-entry-pwa",
   "name": "Pustak Stall Entry",
   "short_name": "Stall Entry",
   "start_url": "./",
@@ -11,10 +12,30 @@
   "categories": ["business", "productivity"],
   "icons": [
     {
-      "src": "./icon.jpg",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "./icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "./screenshot-540.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "./screenshot-1280.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
     }
   ]
 }
